// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSS Modules > should transform CSS Modules 1`] = `
"// assets/asset-B_IWpIjy
.dummy_dummy_button{color:red;bakcground-color:blue}

// index.js
const classes = {"button":"dummy_button"};

const _button0 = classes["button"];

const btn = document.createElement('div').classList.add(_button0);
document.body.append(btn);
"
`;

exports[`rolldown transform > tests/fixtures/as-string.css 1`] = `
"// as-string.js
//#region tests/fixtures/as-string.css
var as_string_default = ".red{color:red}";

//#endregion
export { as_string_default as default };"
`;

exports[`rolldown transform > tests/fixtures/basic.css 1`] = `
"// basic.css
.red{color:red}

// basic.js
"
`;

exports[`rolldown transform > tests/fixtures/import.css 1`] = `
"// import.css
.red{color:red}


// import.js
//#region tests/fixtures/basic.css
var basic_default = {};

//#endregion"
`;

exports[`rolldown transform > tests/fixtures/nesting.css 1`] = `
"// nesting.css
.a .b{color:red}

// nesting.js
"
`;

exports[`rollup transform > tests/fixtures/as-string.css 1`] = `
"// as-string.js


// assets/asset-CRu7KFtz
export default ".red{color:red}"
"
`;

exports[`rollup transform > tests/fixtures/basic.css 1`] = `
"// assets/asset-CuZ0KhGL
.red{color:red}

// basic.js

"
`;

exports[`rollup transform > tests/fixtures/import.css 1`] = `
"// assets/asset-C9cPOTFW
@import "./basic.css";

// import.js

"
`;

exports[`rollup transform > tests/fixtures/nesting.css 1`] = `
"// assets/asset-B4RRm-s2
.a .b{color:red}

// nesting.js

"
`;
